# PracticalModernCpp

./: .clang-format  .gitignore  1. Text Processing.md  AsyncExecutionModel.md  CodingStyle.md  Execution-1-4.md  Execution-6.md  How To Select an Array.xlsx  LICENSE  PMC++ Topics.md  README.md  TaskGraph.drawio  每（几）天学一点C++ Execution.md
.obsidian/: appearance.json  community-plugins.json  workspace
articles/: Execution-1.md  Execution-2.md  Execution-3.md  Execution-4.md  Execution-5.md  Execution-6.md  Execution-7.md
brainstorms/: 1. Text Processing.md  CustomizationPoints.md  PMC++ Topics.md
examples/: CMakeLists.txt  CMakePresets.json  CppVersion.h  Ex_3_TextProcessing_String_Manip_Cpp11.cpp  Ex_3_TextProcessing_String_Manip_Cpp14.cpp  Ex_3_TextProcessing_String_Manip_Cpp23.cpp  Ex_X_Executor_Cpp20.cpp  Pex.py  main.cpp  vcpkg.json
examples/unifex/: Findunifex.cmake
slides/: PMC++.0_Intro.md  PMC++.1_SmartPointers.1.md  PMC++.1_SmartPointers.2.md  PMC++.1_SmartPointers.3.md  PMC++.1_SmartPointers.4.md  PMC++.3_TextProcessing.1.md  PMC++.4_TextProcessing.2.md  PMC++.4_TextProcessing.3.ipynb  PMC++.4_TextProcessing.3.md  PMC++.drawio
